[package]
name = "sfu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
futures-channel = "0.3.29"
futures-util = "0.3.29"
log = "0.4.20"
parking_lot = { version = "0.12.1", features = [] }
rtp = "0.9.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
tokio-util = "0.7.10"
tungstenite = "0.21.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
webrtc = "0.9.0"
webrtc-util = "0.8.0"

[[bin]]
name = "sfu-rs"
path = "bin/main.rs"
